# paystack-django

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  check-all.sh  db.sqlite3  docker-compose.yml  manage.py  publish.py  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  publish-testpypi.yml  publish.yml  tests.yml
djpaystack/: __init__.py  admin.py  apps.py  client.py  decorators.py  exceptions.py  middleware.py  models.py  settings.py  signals.py  utils.py
djpaystack/api/: __init__.py  apple_pay.py  base.py  bulk_charges.py  charge.py  customers.py  dedicated_accounts.py  direct_debit.py  disputes.py  integration.py  miscellaneous.py  pages.py  payment_requests.py  plans.py  products.py  refunds.py  settlements.py  splits.py  subaccounts.py  subscriptions.py  terminal.py  transactions.py  transfer_control.py  transfer_recipients.py  transfers.py  verification.py  virtual_terminal.py
djpaystack/dev/: __init__.py  ngrok_tunnel.py  webhook_tester.py
djpaystack/management/commands/: cleanup_paystack_logs.py  list_webhook_events.py  start_webhook_tunnel.py  sync_paystack_data.py  test_webhook.py  verify_paystack_config.py
djpaystack/migrations/: 0001_initial.py
djpaystack/tests/: conftest.py  settings.py  test_client.py  test_customers.py  test_models.py  test_transactions.py  test_utils.py  test_webhooks.py
djpaystack/webhooks/: events.py  handlers.py  urls.py  views.py
docs/: Makefile  conf.py  configuration.rst  contributing.rst  customers.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  subscriptions.rst  transactions.rst  troubleshooting.rst  webhooks.rst
docs/advanced/: async.rst  signals.rst  testing.rst  webhooks.rst
docs/api/: customers.rst  index.rst  payments.rst  refunds.rst  subscriptions.rst  transactions.rst  transfers.rst  verification.rst
pay/: admin.py  forms.py  models.py  paystack.py  urls.py  views.py
pay/migrations/: 0001_initial.py
templates/: base.html  initiate-payment.html  make-payment.html  make-payment2.html
usepaystack/: asgi.py  settings.py  urls.py  wsgi.py
