[metadata]
name = paystack-django
version = 1.0.0
author = Humming Byte
author_email = contact@hummingbyte.com
description = A comprehensive Django integration for Paystack Payment Gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HummingByteDev/paystack-django
project_urls =
    Bug Tracker = https://github.com/HummingByteDev/paystack-django/issues
    Documentation = https://django-paystack.readthedocs.io
    Source Code = https://github.com/HummingByteDev/paystack-django
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.2
    Framework :: Django :: 6.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
install_requires =
    Django>=3.2
    requests>=2.25.0
    urllib3>=1.26.0
    python-decouple>=3.5

[options.extras_require]
dev =
    pytest>=7.0
    pytest-django>=4.5
    pytest-cov>=3.0
    black>=22.0
    flake8>=4.0
    isort>=5.10
    mypy>=0.950
    django-stubs>=1.12.0
    types-requests>=2.25.0
    tox>=3.24
docs =
    sphinx>=4.5
    sphinx-rtd-theme>=1.0
    sphinx-autodoc-typehints>=1.18

[flake8]
max-line-length = 100
exclude =
    .git
    __pycache__
    .venv
    venv
    build
    dist
    migrations
ignore = E203, W503

[tool:pytest]
DJANGO_SETTINGS_MODULE = djpaystack.tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov=djpaystack --cov-report=term-missing
testpaths = djpaystack/tests
